--- a/assets/css/pages/nosotros.css
+++ b/assets/css/pages/nosotros.css
@@ -1,9 +1,9 @@
 .links, .nosotros-enlace{
+    display: flex;
+    position: absolute;
     left: 0%;
     width: 100%;
-    display: flex;
     margin-top: 5px;
-    position: absolute;
     margin-bottom: 5px;
     justify-content: center;
 }
@@ -246,6 +246,7 @@ span{
     z-index: 100;
     position: fixed;
 }
+
 .icono_fijo img:hover{
     filter: drop-shadow(2px 4px 6px black);
 }
@@ -301,6 +302,7 @@ span{
         width: 80%;
         margin: 0;
     }
+
     .galeria-content{
         display: flex;
         flex-direction: column;
@@ -344,7 +346,7 @@ span{
     .links {
         top: 19%;
         width: 100%;
-        height: 40vw;
+        height: 50vw;
         display: flex;
         position: absolute;
         flex-direction: column;
@@ -359,11 +361,13 @@ span{
     }
 
     .nosotros-content{
-        margin: 10rem 0;
+        margin: 11rem 0;
     }
 
     .nosotros-enlace li {
-        height: 10vw;
+        height: 20vw;
+        align-content: center;
+        border-bottom: 3px solid var(--transparente);
     }
 
     .nosotros-enlace li a{
@@ -398,11 +402,12 @@ span{
 }
 
 @media (max-width: 380px){
-     .nosotros-content{
-        margin: 8rem 0;
-    }
     .nosotros .titulo{
         font-size: 25px;
+    }
+
+    .mision-txt .titulo{
+        margin-left: 1rem;
     }
 
     .nosotros-txt, .mision-txt, .vision-txt{
@@ -440,4 +445,10 @@ span{
         border-radius: 10px;
     }
 
+}
+
+@media (max-width: 380px){
+    .links{
+        height: 60vw;
+    }
 }
