--- a/assets/css/general/estructura-general.css
+++ b/assets/css/general/estructura-general.css
@@ -6,7 +6,16 @@ html {
     scroll-behavior: smooth;
     font-family: var(--fuente);
 }
-
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+main {
+  flex: 1;
+}
 body {
     margin: 0;
     padding: 0;
