--- a/assets/css/pages/blog.css
+++ b/assets/css/pages/blog.css
@@ -11,34 +11,26 @@
 
 .noticia {
     max-width: 450px;
-    margin: 15px;
+    margin: 40px 15px;
     padding: 15px;
     border-radius: 8px;
-    background: var(--blanco);
     box-shadow: 2px 2px 10px var(--negro);
+    background: var(--blanco);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.noticia h2 ,.noticia h3 {
+.noticia h2 ,.noticia h3 ,.blog h2 {
     font-size: 20px;
     color: var(--azul-oscuro);
+    text-align: center;
 }
 
 .noticia img {
     width: 100%;
     height: auto;
     border-radius: 5px;
-}
-
-.blog h2{
-    font-size: 25px;
-    text-align: center;
-}
-
-.noticia{
-    margin: 40px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
 }
 
 .noticia p {
@@ -87,7 +79,7 @@
 }
 
 .lista-salud li:hover,.recomendaciones li:hover {
-    background-color: var(-celeste);
+    background-color: var(--celeste);
 }
 
 @media (max-width: 1441px) {
@@ -117,6 +109,7 @@
 
 @media (max-width: 769px) {
      .noticia {
+        margin: 1rem 0.5rem;
         width: 90%;
     }
     .lista-salud li, .recomendaciones li{
