--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,14 @@
+@import url("general/modal.css");
+@import url("general/variables.css");
+@import url("general/animacion.css");
+@import url("general/formulario.css");
 @import url("general/barra-navegacion.css");
 @import url("general/estructura-general.css");
-@import url("general/variables.css");
-
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"); 
 @import url("pages/blog.css");
-@import url("pages/contacto.css");
-@import url("pages/inicio.css");
 @import url("pages/login.css");
+@import url("pages/inicio.css");
+@import url("pages/contacto.css");
+@import url("pages/intranet.css");
 @import url("pages/nosotros.css");
 @import url("pages/servicios.css");
- 
